--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!--
+Este archivo es parte del proyecto GenPromptPreICFES11
+
+Copyright (C) 2024 CREARED.EDU.CO
+
+Este programa es software libre: puedes redistribuirlo y/o modificarlo 
+bajo los términos de la Licencia Pública General Affero de GNU publicada 
+por la Free Software Foundation, ya sea la versión 3 de la Licencia, 
+o (a tu elección) cualquier versión posterior.
+
+Este programa se distribuye con la esperanza de que sea útil, 
+pero SIN NINGUNA GARANTÍA; sin incluso la garantía implícita de 
+COMERCIABILIDAD o IDONEIDAD PARA UN PROPÓSITO PARTICULAR. 
+Consulta la Licencia Pública General Affero de GNU para más detalles.
+
+Deberías haber recibido una copia de la Licencia Pública General Affero de GNU 
+junto con este programa. En caso contrario, consulta <http://www.gnu.org/licenses/>.
+-->
+
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
